# rand

./: .doc-upload.sh  .gitignore  .travis.yml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.lock.msrv  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  UPDATING.md  appveyor.yml  build.rs  clippy.toml  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  suggest-a-change.md
.github/workflows/: benches.yml  distr_test.yml  gh-pages.yml  release.yml  rust-clippy.yml  test.yml  workspace.yml
benches/: Cargo.toml  bench.rs  distributions.rs  generators.rs  misc.rs  rustfmt.toml  seq.rs  seq_choose.rs  shuffle.rs  uniform.rs  uniform_float.rs  uniform_simd.rs  weighted.rs
benches/benches/: array.rs  base_distributions.rs  bool.rs  distr.rs  generators.rs  misc.rs  seq.rs  seq_choose.rs  shuffle.rs  simd.rs  standard.rs  truncnorm.rs  uniform.rs  uniform_float.rs  weighted.rs
benches/distributions/: exponential.rs  gamma.rs  mod.rs  normal.rs  range.rs
benches/src/: bool.rs  distr.rs  generators.rs  seq_choose.rs  shuffle.rs  uniform.rs  uniform_float.rs  weighted.rs
ci/: script.sh
derive_rand/: Cargo.toml  README.md
derive_rand/src/: lib.rs
diagrams/src/: main.py  requirements.txt
distr_test/: Cargo.lock.msrv  Cargo.toml
distr_test/tests/: cdf.rs  skew_normal.rs  weighted.rs  zeta.rs
distr_test/tests/ks/: mod.rs
doc/: README.md
examples/: cat_rng.rs  monte-carlo.rs  monty-hall.rs  print-next.rs  rayon-monte-carlo.rs  smallrng-code-gen.rs
rand-core/: CHANGELOG.md  Cargo.toml  README.md
rand-core/src/: error.rs  impls.rs  le.rs  lib.rs
rand-derive/: Cargo.toml  README.md
rand-derive/src/: lib.rs
rand-derive/tests/: rand_macros.rs  test_derive.rs
rand_benches/: Cargo.toml
rand_benches/src/: main.rs
rand_chacha/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rand_chacha/src/: chacha.rs  guts.rs  lib.rs
rand_core/: CHANGELOG.md  Cargo.toml  README.md
rand_core/src/: .le.rs.kate-swp  blanket_impls.rs  block.rs  error.rs  fill.rs  impls.rs  le.rs  lib.rs  mock.rs  os.rs  seed.rs
rand_core/tests/: fill.rs
rand_distr/: CHANGELOG.md  Cargo.toml  README.md
rand_distr/benches/: Cargo.toml  distributions.rs
rand_distr/benches/src/: distributions.rs
rand_distr/plots/py/: main.py
rand_distr/src/: beta.rs  binomial.rs  cauchy.rs  chi_squared.rs  dirichlet.rs  exponential.rs  fisher_f.rs  frechet.rs  gamma.rs  geometric.rs  gumbel.rs  hypergeometric.rs  inverse_gaussian.rs  lib.rs  multinomial.rs  negative_binomial.rs  normal.rs  normal_inverse_gaussian.rs  pareto.rs  pert.rs  poisson.rs  rayleigh.rs  skew_normal.rs  student_t.rs  triangular.rs  unit_ball.rs  unit_circle.rs  unit_disc.rs  unit_sphere.rs  utils.rs  weibull.rs  weighted_alias.rs  weighted_tree.rs  zeta.rs  zipf.rs
rand_distr/src/weighted/: alias_method.rs  mod.rs
rand_distr/tests/: cdf.rs  pdf.rs  sparkline.rs  uniformity.rs  value_stability.rs
rand_distr/tests/common/: mod.rs  spec_func.rs
rand_hc/: CHANGELOG.md  Cargo.toml  README.md
rand_hc/src/: hc128.rs  lib.rs
rand_hc128/: Cargo.toml  README.md
rand_hc128/src/: lib.rs
rand_isaac/: CHANGELOG.md  Cargo.toml  README.md
rand_isaac/src/: isaac.rs  isaac64.rs  isaac_array.rs  lib.rs
rand_jitter/: CHANGELOG.md  Cargo.toml  README.md
rand_jitter/benches/: mod.rs
rand_jitter/src/: error.rs  lib.rs  platform.rs
rand_jitter/tests/: mod.rs
rand_macros/: Cargo.toml  README.md
rand_macros/src/: lib.rs
rand_macros/tests/: rand_macros.rs
rand_os/: CHANGELOG.md  Cargo.toml  README.md
rand_os/src/: cloudabi.rs  dragonfly_haiku_emscripten.rs  freebsd.rs  fuchsia.rs  lib.rs  linux_android.rs  macos.rs  netbsd.rs  openbsd_bitrig.rs  random_device.rs  redox.rs  solaris.rs  solarish.rs  wasm32_bindgen.rs  wasm32_stdweb.rs  windows.rs
rand_os/src/impls/: mod.rs  netbsd.rs
rand_pcg/: CHANGELOG.md  Cargo.toml  README.md
rand_pcg/src/: lib.rs  pcg128.rs  pcg128cm.rs  pcg64.rs
rand_pcg/tests/: lcg128cmdxsm64.rs  lcg128dxsm64.rs  lcg128xsl64.rs  lcg64dxsm32.rs  lcg64xsh32.rs  mcg128dxsm64.rs  mcg128xsl64.rs
rand_seeder/: CHANGELOG.md  Cargo.toml  README.md
rand_seeder/src/: lib.rs  sip.rs
rand_trng/: Cargo.toml  LICENSE-MIT  README.md
rand_trng/src/: lib.rs
rand_xorshift/: CHANGELOG.md  Cargo.toml  README.md
rand_xorshift/src/: lib.rs  xorshift.rs
rand_xorshift/tests/: mod.rs
rand_xoshiro/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
rand_xoshiro/benches/: bench.rs
rand_xoshiro/src/: common.rs  lib.rs  splitmix64.rs  xoroshiro128plus.rs  xoroshiro128plusplus.rs  xoroshiro128starstar.rs  xoroshiro64star.rs  xoroshiro64starstar.rs  xoshiro128plus.rs  xoshiro128plusplus.rs  xoshiro128starstar.rs  xoshiro256plus.rs  xoshiro256plusplus.rs  xoshiro256starstar.rs  xoshiro512plus.rs  xoshiro512plusplus.rs  xoshiro512starstar.rs
rand_xoshiro/tests/: serde.rs
results-uniform-int/: notes.md
results-uniform-int-1145G7-2GHz/report/: index.html
results-uniform-int-5800X-2/report/: index.html
results-uniform-int-5800X-3/report/: index.html
results-uniform-int/report/: index.html
src/: chacha.rs  deprecated.rs  entropy_rng.rs  error.rs  impls.rs  isaac.rs  iter.rs  jitter.rs  jitter_rng.rs  le.rs  lib.rs  log_macros.rs  mock.rs  os.rs  prelude.rs  rand_impls.rs  read.rs  reader.rs  reseeding.rs  rng.rs  sample.rs  seq.rs  sequence.rs  thread_local.rs  thread_rng.rs  utils.rs  xorshift.rs
src/distr/: bernoulli.rs  cauchy.rs  distribution.rs  float.rs  integer.rs  mod.rs  other.rs  slice.rs  uniform.rs  uniform_float.rs  uniform_int.rs  uniform_other.rs  utils.rs  weighted.rs  weighted_index.rs
src/distributions/: bernoulli.rs  binomial.rs  cauchy.rs  default.rs  dirichlet.rs  distribution.rs  exponential.rs  float.rs  float_conversions.rs  (+27 more)
tests/: bool.rs  choose_multiple_weighted.rs  derive_rand.rs  fill.rs  gen_index.rs  rand_macros.rs  uniformity.rs
tests/wasm_bindgen/: Cargo.toml
tests/wasm_bindgen/js/: index.js
tests/wasm_bindgen/src/: lib.rs
utils/: redirect.html  ziggurat_tables.py
(+9633 files in other folders)
