[package]
name = "benches"
version = "0.1.0"
edition = "2024"
publish = false

[features]
# Option (requires nightly Rust): experimental SIMD support
simd_support = ["rand/simd_support"]

[dependencies]

[dev-dependencies]
rand = { path = "..", features = ["small_rng", "nightly"] }
rand_pcg = { path = "../rand_pcg" }
rand_chacha = { path = "../rand_chacha" }
criterion = "0.5"
criterion-cycles-per-byte = "0.6"

[[bench]]
name = "array"
harness = false

[[bench]]
name = "bool"
harness = false

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "seq_choose"
harness = false

[[bench]]
name = "shuffle"
harness = false

[[bench]]
name = "simd"
harness = false

[[bench]]
name = "standard"
harness = false

[[bench]]
name = "uniform"
harness = false

[[bench]]
name = "uniform_float"
harness = false

[[bench]]
name = "weighted"
harness = false

[patch.crates-io]
rand_core = { git = "https://github.com/rust-random/rand_core.git", branch = "reduce-block-code" }
