[package]
name = "benches"
version = "0.1.0"
edition = "2024"
publish = false

[features]
# Option (requires nightly Rust): experimental SIMD support
simd_support = ["rand/simd_support"]

[workspace]

[dev-dependencies]
rand = { path = ".." }
rand_pcg = "0.10"
chacha20 = { version = "0.10.0", default-features = false, features = ["rng"] }
criterion = "0.5"
criterion-cycles-per-byte = "0.6"

[[bench]]
name = "array"
harness = false

[[bench]]
name = "bool"
harness = false

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "seq_choose"
harness = false

[[bench]]
name = "shuffle"
harness = false

[[bench]]
name = "simd"
harness = false

[[bench]]
name = "standard"
harness = false

[[bench]]
name = "uniform"
harness = false

[[bench]]
name = "uniform_float"
harness = false

[[bench]]
name = "weighted"
harness = false
