[package]
name = "distr_test"
version = "0.5.0-alpha.1"
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
homepage = "https://rust-random.github.io/book"
description = """
Testing of distributions of rand_distr
"""
edition = "2021"
rust-version = "1.61"

[dev-dependencies]
rand_distr = { path = "../rand_distr", version = "=0.5.0-alpha.1", default-features = false }
rand = { path = "..", version = "=0.9.0-alpha.1", features = ["small_rng"] }
num-traits = "0.2.19"
# Special functions for testing distributions
special = "0.11.0"
spfunc = "0.1.0"
# Cdf implementation
statrs = "0.17.1"
