[package]
name = "distr_test"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
rand_distr = { path = "../rand_distr", version = "=0.5.0-beta.1", default-features = false, features = ["alloc"] }
rand = { path = "..", version = "=0.9.0-beta.1", features = ["small_rng"] }
num-traits = "0.2.19"
# Special functions for testing distributions
special = "0.11.0"
spfunc = "0.1.0"
# Cdf implementation
statrs = "0.17.1"
