[package]

name = "rand-derive"
version = "0.5.0-pre.0"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang-nursery/rand"
documentation = "https://docs.rs/rand_derive"
homepage = "https://github.com/rust-lang-nursery/rand"
description = """
`#[derive(RngCore)]` functionality for the `RngCore` trait.
"""

[lib]
proc-macro = true

[dependencies]
quote = "0.4"
syn = "0.12"

[dev-dependencies]
rand = { path = ".." }
