[package]

name = "rand_derive"
version = "0.5.0"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang-nursery/rand"
documentation = "https://docs.rs/rand_derive"
homepage = "https://github.com/rust-lang-nursery/rand"
description = """
`#[derive(Rand)]` macro (deprecated).
"""

[badges]
maintenance = { status = "deprecated" }

[lib]
proc-macro = true

[dependencies]
quote = "0.3"
syn = "0.11"

[dev-dependencies]
rand = { version = "0.5" }
