[package]
name = "rand_chacha"
version = "0.9.0"
authors = ["The Rand Project Developers", "The Rust Project Developers", "The CryptoCorrosion Contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/rand_chacha"
description = """
ChaCha random number generator
"""
keywords = ["random", "rng", "chacha"]
categories = ["algorithms", "no-std"]
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
rand_core = { path = "../rand_core", version = "0.9.0" }
ppv-lite86 = { version = "0.2.14", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
# Only to test serde
serde_json = "1.0.120"
rand_core = { path = "../rand_core", version = "0.9.0", features = ["os_rng"] }

[features]
default = ["std"]
os_rng = ["rand_core/os_rng"]
std = ["ppv-lite86/std", "rand_core/std"]
serde = ["dep:serde"]
