[package]
name = "rand_chacha"
version = "0.10.0-rc.6"
authors = ["The Rand Project Developers", "The Rust Project Developers", "The CryptoCorrosion Contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/rand_chacha"
homepage = "https://rust-random.github.io/book"
description = """
ChaCha random number generator
"""
keywords = ["random", "rng", "chacha"]
categories = ["algorithms", "no-std"]
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
rand_core = { version = "0.10.0-rc-4" }
ppv-lite86 = { version = "0.2.14", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
# Only to test serde
serde_json = "1.0.120"
getrandom = { version = "0.4.0-rc.0", features = ["sys_rng"] }

[features]
default = ["std"]
std = ["ppv-lite86/std"]
serde = ["dep:serde"]
