[package]
name = "rand_hc"
version = "0.3.0"
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/rand_hc"
homepage = "https://rust-random.github.io/book"
description = """
HC128 random number generator
"""
keywords = ["random", "rng", "hc128"]
categories = ["algorithms", "no-std"]
edition = "2018"

[dependencies]
rand_core = { path = "../rand_core", version = "0.6.0" }
