[package]
name = "rand_hc128"
version = "0.1.0" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rand Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/rand_hc128"
homepage = "https://crates.io/crates/rand_hc128"
description = """
HC128 random number generator
"""
keywords = ["random", "rng", "hc128"]
categories = ["algorithms", "no-std"]

[badges]
travis-ci = { repository = "rust-random/rand" }
appveyor = { repository = "dhardy/rand" }

[dependencies]
rand_core = { path = "../rand_core", version = ">=0.2, <0.4", default-features=false }
