[package]
name = "rand_isaac"
version = "0.2.0"
authors = ["The Rand Project Developers", "The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://rust-random.github.io/rand/rand_isaac/"
homepage = "https://crates.io/crates/rand_isaac"
description = """
ISAAC random number generator
"""
keywords = ["random", "rng", "isaac"]
categories = ["algorithms", "no-std"]
edition = "2018"

[badges]
travis-ci = { repository = "rust-random/rand" }
appveyor = { repository = "rust-random/rand" }

[features]
serde1 = ["serde", "rand_core/serde1"]

[dependencies]
rand_core = { path = "../rand_core", version = "0.5" }
serde = { version = "1.0.63", features = ["derive"], optional = true }
# Not a direct dependency but required to boost the minimum version:
serde_derive = { version = "1.0.63", optional = true }

[dev-dependencies]
# This is for testing serde, unfortunately we can't specify feature-gated dev
# deps yet, see: https://github.com/rust-lang/cargo/issues/1596
bincode = "1.1.4"
