[package]

name = "rand_macros"
version = "0.1.10"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/rand"
documentation = "http://doc.rust-lang.org/rand"
homepage = "https://github.com/rust-lang/rand"
description = """
`#[derive]`-like functionality for the `rand::Rand` trait.
"""

[lib]
name = "rand_macros"
plugin = true

[dev-dependencies]
rand = { path = "..", version = "0.3" }
