[package]
name = "rand_os"
version = "0.2.0"
authors = ["The Rand Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/rand_os"
homepage = "https://crates.io/crates/rand_os"
description = "OS backed Random Number Generator"
keywords = ["random", "rng", "os"]
edition = "2018"

[badges]
travis-ci = { repository = "rust-random/rand" }
appveyor = { repository = "rust-random/rand" }

[features]
log = ["getrandom/log"]
# re-export optional WASM dependencies to avoid breakage:
wasm-bindgen = ["getrandom/wasm-bindgen"]
stdweb = ["getrandom/stdweb"]

[dependencies]
rand_core = { path = "../rand_core", version = "0.5", features = ["std"] }
getrandom = "0.1.1"
